--- a/index.html
+++ b/index.html
@@ -11,3 +11,9 @@ font-family: Arial;
 p{
 font-size: 12px;
 }
+<!--Создание меню--> 
+<ul> 
+<li>Главная</li> 
+<li><a href="catalog.html">Каталог</a></li> 
+<li><a href="contacts.html">Контакты</a></li> 
+</ul> 
