--- a/index.html
+++ b/index.html
@@ -19,3 +19,29 @@ font-size: 12px;
 <li><a href="contacts.html">Контакты</a></li> 
 </ul> 
 <html>
+<head>
+        <title>Сайт МКМТ</title>
+   </head>
+  <body>
+
+     <table width="715"  border="1"
+          align="center" cellspacing="0" cellpadding="10">
+
+        <tr bgcolor="blue">
+            <td colspan="2" height="100">шапка сайта</td>
+        </tr>
+        <tr bgcolor="green">
+            <td  width="190" height="300">меню</td>
+            <td>КОНТЕНТ</td>
+        </tr>
+
+        <tr bgcolor="green">
+            <td colspan="2" height="30">низ сайта</td>
+        </tr>
+
+    </table>
+
+   </body>
+
+</html>
+
