--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ h1,h3,p {
 text-align: center;
 color: blue;
 }
-h1 {
+h1{
 font-family: Verdana;
 }
 h3 {
@@ -18,7 +18,7 @@ font-size: 12px;
 <li><a href="catalog.html">Каталог</a></li> 
 <li><a href="contacts.html">Контакты</a></li> 
 </ul> 
-<html>
+</html>
 <head>
         <title>Сайт МКМТ</title>
    </head>
