--- a/index.html
+++ b/index.html
@@ -38,9 +38,21 @@ font-size: 12px;
         <tr bgcolor="green">
             <td colspan="2" height="30">низ сайта</td>
         </tr>
+             <formaction=""> 
+                     <fieldset> 
+                             <legend>Страница регистрации</legend> 
+                             <input type="text" size="30" placeholder="Ваше Имя"> 
+                             <input type="password" size="8">
+                             <input type="checkbox" checked="checked">
+                             <input type="radio" name="radio">
+                             <input type="file"> 
+                             <input type="submit" value="Сохранить"> 
+                             <input type="reset" value="Очистить"> 
+                             <input type="button" value="просто кнопка">
+                     </fieldset> 
+                     </form> 
+ </table>
 
-    </table>
-
-   </body>
+ </body>
 
 </html>
