--- a/index.html
+++ b/index.html
@@ -1,41 +1,59 @@
 <html>
-h1,h3,p {
-text-align: center;
-color: blue;
-}
-h1{
-font-family: Verdana;
-}
-h3 {
-font-family: Arial;
-}
-p {
-font-size: 12px;
-}
 <!--Создание меню--> 
 <ul> 
 <li>Главная</li> 
 <li><a href="catalog.html">Каталог</a></li> 
 <li><a href="contacts.html">Контакты</a></li> 
 </ul> 
+        <catalog.html>
+                <table width="715"  border="1"
+          align="center" cellspacing="0" cellpadding="10">
+
+        <tr bgcolor="white">
+            <td colspan="2" height="100">шапка сайта</td>
+        </tr>
+        <tr bgcolor="darkblue">
+            <td  width="190" height="300">меню</td>
+            <td>КОНТЕНТ</td>
+        </tr>
+
+        <tr bgcolor="blue">
+            <td colspan="2" height="30">низ сайта</td>
+        </tr>
+                       <contacts,html>
+                               <table width="715"  border="1"
+          align="center" cellspacing="0" cellpadding="10">
+
+        <tr bgcolor="white">
+            <td colspan="2" height="100">шапка сайта</td>
+        </tr>
+        <tr bgcolor="darkblue">
+            <td  width="190" height="300">меню</td>
+            <td>КОНТЕНТ</td>
+        </tr>
+
+        <tr bgcolor="blue">
+            <td colspan="2" height="30">низ сайта</td>
+        </tr>
+                
 </html>
 <head>
-        <title>Сайт МКМТ</title>
+        <title>Главная</title>
    </head>
   <body>
 
      <table width="715"  border="1"
           align="center" cellspacing="0" cellpadding="10">
 
-        <tr bgcolor="blue">
+        <tr bgcolor="white">
             <td colspan="2" height="100">шапка сайта</td>
         </tr>
-        <tr bgcolor="green">
+        <tr bgcolor="darkblue">
             <td  width="190" height="300">меню</td>
             <td>КОНТЕНТ</td>
         </tr>
 
-        <tr bgcolor="green">
+        <tr bgcolor="blue">
             <td colspan="2" height="30">низ сайта</td>
         </tr>
              <formaction=""> 
