--- a/contacts.html
+++ b/contacts.html
@@ -1,1 +1,36 @@
+<html>
+</head>
+  <body>
 
+     <table width="715"  border="1"
+          align="center" cellspacing="0" cellpadding="10">
+
+        <tr bgcolor="white">
+            <td colspan="2" height="80">шапка сайта</td>
+        </tr>
+        <tr bgcolor="darkblue">
+            <td  width="190" height="300">меню</td>
+            <td>КОНТЕНТ</td>
+        </tr>
+
+        <tr bgcolor="blue">
+            <td colspan="2" height="40">низ сайта</td>
+        </tr>
+             <formaction=""> 
+                     <fieldset> 
+                             <legend>Страница регистрации</legend> 
+                             <input type="text" size="30" placeholder="Ваше Имя"> 
+                             <input type="password" size="8">
+                             <input type="checkbox" checked="checked">
+                             <input type="radio" name="radio">
+                             <input type="file"> 
+                             <input type="submit" value="Сохранить"> 
+                             <input type="reset" value="Очистить"> 
+                             <input type="button" value="просто кнопка">
+                     </fieldset> 
+                     </form> 
+ </table>
+
+ </body>
+
+</html>
