--- a/contacts.html
+++ b/contacts.html
@@ -8,7 +8,7 @@
         <tr bgcolor="white">
             <td colspan="2" height="80">шапка сайта</td>
         </tr>
-        <tr bgcolor="darkblue">
+        <tr bgcolor="blue">
             <td  width="190" height="300">меню</td>
             <td>КОНТЕНТ</td>
         </tr>
