--- a/catalog.html
+++ b/catalog.html
@@ -6,11 +6,13 @@
           align="center" cellspacing="0" cellpadding="10">
 
         <tr bgcolor="white">
-            <td colspan="2" height="80">шапка сайта</td>
+            <td colspan="2" height="80">По вопросам обращайтесь!</td>
         </tr>
-        <tr bgcolor="blue">
-            <td  width="190" height="300">меню</td>
-            <td>КОНТЕНТ</td>
+        <tr bgcolor="white">
+           <td  width="190" height="300">меню</td>
+           <td>ВКонтакте: vk.com/ivan/vasyuk </td>
+          <td>E-mail: ivvasyuk008@gmail.com </td>
+          <td>Телефон: 89889440475 </td>
         </tr>
 
         <tr bgcolor="blue">
