--- a/catalog.html
+++ b/catalog.html
@@ -6,13 +6,10 @@
           align="center" cellspacing="0" cellpadding="10">
 
         <tr bgcolor="white">
-            <td colspan="2" height="80">По вопросам обращайтесь!</td>
+            <td colspan="2" height="80">КАТАЛОГ</td>
         </tr>
         <tr bgcolor="white">
            <td  width="190" height="300">меню</td>
-           <td>ВКонтакте: vk.com/ivan/vasyuk </td>
-          <td>E-mail: ivvasyuk008@gmail.com </td>
-          <td>Телефон: 89889440475 </td>
         </tr>
 
         <tr bgcolor="blue">
