--- a/contacts.html
+++ b/contacts.html
@@ -10,7 +10,9 @@
         </tr>
         <tr bgcolor="blue">
             <td  width="190" height="300">меню</td>
-            <td>КОНТЕНТ</td>
+            <td>ВКонтакте: vk.com/ivan/vasyuk </td>
+          <td>E-mail: ivvasyuk008@gmail.com </td>
+          <td>Телефон: 89889440475 </td>
         </tr>
 
         <tr bgcolor="blue">
