--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <tr bgcolor="white">
             <td colspan="2" height="80">шапка сайта</td>
         </tr>
-        <tr bgcolor="blue">
+        <tr bgcolor="lightblue">
             <td  width="190" height="800">меню</td>
             <td>КОНТЕНТ</td>
         </tr>
