--- a/catalog.html
+++ b/catalog.html
@@ -8,11 +8,11 @@
         <tr bgcolor="white">
             <td colspan="2" height="80">КАТАЛОГ</td>
         </tr>
-        <tr bgcolor="white">
-           <td  width="190" height="300">меню</td>
+        <tr bgcolor="darkgrey">
+           <td  width="190" height="800">меню</td>
         </tr>
 
-        <tr bgcolor="blue">
+        <tr bgcolor="lightbrown">
             <td colspan="2" height="40">низ сайта</td>
         </tr>
              <formaction=""> 
