--- a/contacts.html
+++ b/contacts.html
@@ -8,14 +8,14 @@
         <tr bgcolor="white">
             <td colspan="2" height="80">шапка сайта</td>
         </tr>
-        <tr bgcolor="blue">
+        <tr bgcolor="lightblue">
             <td  width="190" height="300">меню</td>
             <td>ВКонтакте: vk.com/ivan/vasyuk </td>
           <td>E-mail: ivvasyuk008@gmail.com </td>
           <td>Телефон: 89889440475 </td>
         </tr>
 
-        <tr bgcolor="blue">
+        <tr bgcolor="lightbrown">
             <td colspan="2" height="40">низ сайта</td>
         </tr>
              <formaction=""> 
