--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
         <tr bgcolor="white">
             <td colspan="2" height="80">КАТАЛОГ</td>
         </tr>
-        <tr bgcolor="darkgrey">
+        <tr bgcolor="grey">
            <td  width="190" height="800">меню</td>
         </tr>
 
