--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,9 @@
           align="center" cellspacing="0" cellpadding="10">
 
         <tr bgcolor="white">
-            <td colspan="2" height="80">КАТАЛОГ</td>
+            <td colspan="2" height="80">
+              КАТАЛОГ.Вся доступная продукция
+          </td>
         </tr>
         <tr bgcolor="grey">
            <td  width="190" height="800">меню</td>
