--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
      <table width="1280"  border="1"
           align="center" cellspacing="0" cellpadding="10">
 
-        <tr bgcolor="white"> url(img/3a52df08865c0d1ba1048dafd753641d.jpg)
+        <tr bgcolor="white"> 
             <td colspan="2" height="80">шапка сайта</td>
         </tr>
         <tr bgcolor="lightblue">
