--- a/contacts.html
+++ b/contacts.html
@@ -5,8 +5,8 @@
      <table width="1280"  border="1"
           align="center" cellspacing="0" cellpadding="10">
 
-        <tr bgcolor="white"> url(img/3a52df08865c0d1ba1048dafd753641d.jpg)
-            <td colspan="2" height="80">шапка сайта</td>
+        <tr bgcolor="white">
+        <td colspan="2" height="80">шапка сайта</td>
         </tr>
         <tr bgcolor="lightblue">
             <td  width="190" height="800">меню</td>
