--- a/contacts.html
+++ b/contacts.html
@@ -6,6 +6,7 @@
           align="center" cellspacing="0" cellpadding="10">
 
         <tr bgcolor="white">
+          <td img scr<'3a52df08865c0d1ba1048dafd753641d.jpg'></td>
         <td colspan="2" height="80">шапка сайта</td>
         </tr>
         <tr bgcolor="lightblue">
